t/resource/lib/Test/UsedModules/Fail/5.pm
package Test::UsedModules::Fail::5;
use strict;
use warnings;
use utf8;

# meta: whitelist: Module::Load
use Module::Load;

1;
